# cpp-learning-fom-demonstration

./: .clang-format  CMakeLists.txt  LFD.Dockerfile  README.md  build.sh  main.cpp  run.sh
data/gmm/: gmm.txt
data/kmeans/: kmeans.txt
include/: EM_initilization.h  datapoints.h  em-Initilization-mlpack.h  em-Initilization.h  emInitilization.h  emInitilizationMlpack.h  gmm.h  gmr.h  kmeans_mlpack.h  matplotlibcpp.h  mvn.h
src/: EM_initilization.cpp  datapoints.cpp  em-Initilization-mlpack.cpp  emInitilization.cpp  emInitilizationMlpack.cpp  gmm.cpp  gmr.cpp  kmeans_mlpack.cpp  mvn.cpp
tests/: main.cpp
